chore(feedback): incorporating pr feedback. #38.